fix add button  on ios

--- a/src/App.css
+++ b/src/App.css
@@ -316,14 +316,15 @@ margin-bottom: 10px;
   border: 0;
 }
 .todo-button{
-  width: 50px !important;
+  width: 50px!important;
   height: 50px;
   background-color: var(--background-color);
-  border-radius:50px;
-  font-size: 35px;
+  border-radius: 50px;
+  font-size: 1.5rem;
   color: var(--secondary-color-4);
   border: 0;
-  box-shadow: -1px -0px 10px 0px var(--primary-background-3);
+  box-shadow: -1px -0px 10px 0 var(--primary-background-3);
+  padding: 0;
 }
 
 .Task__Edit__input{
